--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,11 +1,13 @@
-<div class="row">
-
-        <% @bands.each do |band| %>
-<div class="small-4 columns">
-        <%= link_to band.name, band_path(band.id)%>
-        <img class="thumbnail"><%= image_tag band.poster.profile %>
-        <p><%= band.description %></p>
+<div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
+    <% @bands.each do |band| %>
+      <div class="small-4 columns">
+        <%= link_to band_path(band.id) do %>
+        <div class="callout" data-equalizer-watch>
+          <p id="band-name"><%= band.name %></p>
+            <%= image_tag band.poster.profile, class: "band-image"%>
+          <p id="band-description"><%= band.description %></p>
+        </div>
       </div>
-        <% end %>
-
+      <% end %>
+    <% end %>
 </div>
