--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <%= Gon::Base.render_data %>
   </head>
 
   <body>
@@ -29,7 +30,7 @@
     </ul>
   </div>
   <div class="top-bar-right">
-    
+
   </div>
 </div>
     <%= yield %>
