--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,14 @@
   <body>
     <div class="title-bar">
       <div class="title-bar-left">
-        <span class="title-bar-title">Band Aide</span>
+        <!-- <span class="title-bar-title">Band Aide</span> -->
+        <%=link_to image_tag("background/Band Aide Logo.png", size: "100x150"), root_path %>
       </div>
       <div class="title-bar-right">
         <ul class="menu">
           <% if musician_signed_in? %>
             <li><%= link_to "Create a band", new_band_path %></li>
+            <li><span>Logged in as: <%= current_musician.firstname %>&nbsp&nbsp</span></li>
             <li><%= image_tag current_musician.avatar.thumb %></li>
             <li><%= link_to "Show Profile", musician_path(current_musician) %></li>
             <li><%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %></li>
