--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -9,9 +9,14 @@
           <%= image_tag musician.avatar.profile, class: "musician-image" %>
         <p id="musician-position">
           <% musician.positions.each do |position| %>
-            <%= position.description %><br />
+            <!-- <%= position.description %><br /> -->
+            <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
+            <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
+            <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
+            <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
+            <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
           <% end %>
-        </p>
+        </p><br/>
         <p id="musician-location">
         <% if current_musician.present? %>
           <%= musician.display_distance_to(@musician) %> km away<br />
