--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -300,7 +300,16 @@
 // // .modal-open {
 // //   overflow: hidden;
 // // }
-
+// .background_video  {
+//   position: fixed;
+//   top: 50%; left: 50%;
+//   z-index: 1;
+//   min-width: 100%;
+//   min-height: 100%;
+//   width: auto;
+//   height: auto;
+//   transform: translate(-50%, -50%);
+// }
 .callout {
   position: relative;
   padding: 0;
