--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -32,18 +32,6 @@
              <li><%= link_to "Sign up", new_musician_registration_path, :method => :get %></li>
           <% end %>
         </ul>
-
-      <!-- </li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-    </ul>
-  </div>
-  <div class="top-bar-right">
-
-  </div>
-</div>
-    <%= yield %> -->
-
       </div>
     </div>
 
@@ -55,7 +43,6 @@
   <% end %>
 
   <%= yield %>
-
 
   </body>
 </html>
