--- a/app/views/home/_video.html.erb
+++ b/app/views/home/_video.html.erb
@@ -1,3 +1,3 @@
 
-<%= image_tag("background/Band Aide Logo.png", class: "logo") %>
+ <%= image_tag("background/Band Aide Logo.png", class: "logo") %> -->
 <%= video_tag("Bandaide_background_video_final", autoplay: true, loop: true, class: "background_video") %>
