added a href link to bandaide logo

--- a/app/views/home/_video.html.erb
+++ b/app/views/home/_video.html.erb
@@ -1,3 +1,4 @@
 
-<%= image_tag("background/Band Aide Logo.png", class: "logo") %>
+<a href="#title">
+<%= image_tag("background/Band Aide Logo.png", class: "logo") %></a>
 <%= video_tag("Bandaide_background_video_final", autoplay: true, loop: true, class: "background_video") %>
