--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render "home/video" %>
     <main>
-      <h1 class="title">Welcome to Band Aide</h1>
+      <h1 id="title">Welcome to Band Aide</h1>
 
       <button class="filter-side-menu">
         <a id="nav-toggle" href="#">Filter by attribute</a>
