--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -1,2 +1,37 @@
-// @import "bourbon";
-// @import "neat";
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+h3 {
+  font-size: 12pt;
+}
+
+aside {
+  float: left;
+  width: 30%;
+  background-color: #ccc;
+  height: 100%;
+}
+
+main {
+  float: left;
+  width: 70%;
+  padding: 30px;
+}
+
+#map {
+  margin-left: auto;
+  margin-right: auto;
+}
