Added div back to bands to target section for band filter

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,8 +34,10 @@
         </aside>
       </button>
 
-        <h3>Bands</h3>
-            <%= render "home/bands" %>
+      <h3>Bands</h3>
+      <div class="bands">
+          <%= render "home/bands" %>
+      </div>
 
       <section id="musicians-list">
         <h3>Musicians near you</h3>
