--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,15 +1,28 @@
 <h1> Create your band members <h1>
 
-    <%= form_for [@band , @member] do |f| %>
+<%= form_for [@band , @member] do |f| %>
 
-    <div id="field">
-      <%= f.label :position %><br />
-      <%= f.select :position_id , options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
-      <%= f.hidden_field :musician_id, :value => current_musician.id %>
-      <%= f.hidden_field :band_id, :value => @band.id %>
-    </div>
-
-     <div class="field">
-      <%= f.submit %>
-    </div>
+  <% if @member.errors.any? %>
+    <h4><%= pluralize( @member.errors.count, "error") %>
+        prohibited this member from being saved:
+    </h4>
   <% end %>
+  <ul>
+    <% @member.errors.full_messages.each do | msg | %>
+      <li>
+          <%= msg %>
+      </li>
+    <% end %>
+  </ul>
+
+  <div id="field">
+    <%= f.label :position %><br />
+    <%= f.select :position_id , options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
+    <%= f.hidden_field :musician_id, :value => current_musician.id %>
+    <%= f.hidden_field :band_id, :value => @band.id %>
+  </div>
+
+   <div class="field">
+    <%= f.submit %>
+  </div>
+<% end %>
