Added a method on the musicians model to see if the long/lat is available.  Modified the distance to so that if it's nil then it won't error out when rounding.  Also updated the musicians partial so that if the long/lat isn't available, it'll show the city instead of the distance.

--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -18,7 +18,7 @@
           <% end %>
         </p><br/>
         <p id="musician-location">
-        <% if current_musician.present? %>
+        <% if current_musician.present? && current_musician.has_long_lat? && musician.has_long_lat? %>
           <%= musician.display_distance_to(@musician) %> km away<br />
         <% else %>
           Based in <%= musician.city %>
