Changed the callouts on the musicians and bands to equalizers cuz I realized that the callouts are the flash notifications and kept shrinking the images when a callout flash occurred.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -322,9 +322,11 @@ width: 100%;
 z-index: 1;
 position: relative;
 }
-.callout {
+
+.equalizer {
   position: relative;
   padding: 0;
+  margin:  10px auto;
 
   .band-image {
     position: relative;
