--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -15,13 +15,22 @@
 
     <% @band.members.each do |member| %>
       <p>
-        <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "lead" %>
-        <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "rhythm" %>
-        <%= image_tag("skills/singer.png", size:  "50x50") if member.position.description == "singer" %>
-        <%= image_tag("skills/drummer.png", size:  "50x50") if member.position.description == "drummer" %>
-        <%= image_tag("skills/keyboard.png", size:  "50x50") if member.position.description == "keyboard" %>
-        <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "bass" %>
-        <%= member.musician.firstname %>
+         <% if member.musician != nil %>
+          <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "lead" %>
+          <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "rhythm" %>
+          <%= image_tag("skills/singer.png", size:  "50x50") if member.position.description == "singer" %>
+          <%= image_tag("skills/drummer.png", size:  "50x50") if member.position.description == "drummer" %>
+          <%= image_tag("skills/keyboard.png", size:  "50x50") if member.position.description == "keyboard" %>
+          <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "bass" %>
+          <%= member.musician.firstname %>
+        <% else %>
+          <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "lead" %>
+          <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "rhythm" %>
+          <%= image_tag("skills/singer.png", size:  "50x50") if member.position.description == "singer" %>
+          <%= image_tag("skills/drummer.png", size:  "50x50") if member.position.description == "drummer" %>
+          <%= image_tag("skills/keyboard.png", size:  "50x50") if member.position.description == "keyboard" %>
+          <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "bass" %>
+        <%end%>
 
         <% if musician_signed_in? %>
 
