--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#map {
+  height: 600px;
+  width: 1000px;
+}
+
+#position{
+  width: 200px
+}
+
+#genre{
+  width: 200px; 
+}
