Continuing to change layout of profile page.

--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -14,25 +14,22 @@ html, body {
   text-align: center;
 }
 
-h3 {
-  font-size: 12pt;
+h1 {
+  font-size: 20pt;
+}
+
+h3{
+  font-size: 16pt;
 }
 
 aside {
+  margin-top: 5%;
   margin-left: 5%;
+  margin-bottom: 5%;
   float: left;
   width: 25%;
   background-color: #ccc;
   height: 100%;
-  border-radius: 5%;
-
-  h1 {
-    font-size: 20pt;
-  }
-
-  h3{
-    font-size: 16pt;
-  }
 }
 
 main {
