Changed the map so we have two seperate maps

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#map {
+#searchmap {
   height: 600px;
   width: 1000px;
 }
@@ -11,5 +11,5 @@
 }
 
 #genre{
-  width: 200px; 
+  width: 200px;
 }
