--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Search Page </h1>
-
 <!-- <head>
 
 <script type= "text/javascript" src= "search.js"></script>
@@ -10,8 +9,8 @@
 <body>
 
 
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
-<div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap2", async: true, defer: true %>
+<div id="searchmap" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>>
 </div>
 <!-- <select name="positions">
     <%= @positions.each do |position| %>
