--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <aside class="profile-left">
     <%= image_tag @band.poster.profile %><br />
-    <h3>Description</h3>
+    <h3>Bio</h3>
     <p><%= @band.description %></p>
         <a href="mailto:<%= @band.leader.email%>?Subject=Hello">Contact Band Leader</a>
 
@@ -63,24 +63,23 @@
         <%= form_for [@band , @member] do |f| %>
 
           <div id="field">
-            <%= f.label :position %><br />
+            <%= f.label :create_new_position %><br />
             <%= f.select :position_id , options_for_select(@positions.collect {|p| [ p.description, p.id] }) %>
             <%= f.hidden_field :musician_id, :value => nil %>
             <%= f.hidden_field :band_id, :value => @band.id %>
           </div>
 
           <div class="field">
-            <%= f.submit %>
+            <%= f.submit "Add" %>
           </div>
+          <br>
         <% end %>
 
+        <h2>Musicians near you:</h2>
+        <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%> %>
+
       <% end %>
-
-
     <% end %>
-
-    <!-- Why do we need a map on the band page? -->
-    <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>  >
     </div>
   </main>
 </div>
