--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,29 +1,16 @@
 <div class="container">
 
   <aside>
-    <h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
-
-    <% @musician.positions.each do |position| %>
-      <!-- <%= position.description %><br /> -->
-      <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
-      <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
-      <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
-      <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
-      <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
-    <% end %>
-
     <br /><%= image_tag @musician.avatar.profile %><br />
 
-    <h3>Bio:</h3>
+    <h3>Bio</h3>
     <%= @musician.description %><br />
 
     <a href="mailto:<%= @musician.email%>?Subject=Hello">Contact Me</a>
 
     <%= button_to "Back", request.referer.present? ? request.referer : root_path, method: :get %><br />
-
-    <div class="skills-section">
       <% if @musician.skills.count() > 0 %>
-        <h3>Skills:</h3>
+        <h3>Skills</h3>
 
         <% @musician.skills.each do |skill| %>
           <%= skill.position.description %>
@@ -72,30 +59,35 @@
               <%= f.submit %>
             </div>
           <% end %>
-    </div>
 
         <br /><%= button_to "Edit Profile", edit_musician_registration_path, method: :get %>
 
       <% end %>
     <% end %>
   </aside>
-  
+
   <main>
+    <h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
 
-
-
+    <% @musician.positions.each do |position| %>
+      <!-- <%= position.description %><br /> -->
+      <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
+      <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
+      <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
+      <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
+      <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
+    <% end %>
 
     <% if musician_signed_in? %>
-      <div id="bands-owned">
+      <br><div id="bands-owned">
         <% if current_musician.id == @musician.id %>
 
           <% if current_musician.owned_bands.count > 0 %>
 
-            <h1>Bands owned:</h1><br />
+            <br /><h2>Bands owned:</h2>
 
             <% current_musician.owned_bands.each do |band|%>
-              Band:  <%= band.name %><br />
-              <%= button_to 'View Band', band_path(band), :method => :get %><br />
+              <%= link_to band.name, band_path(band), :method => :get  %><br />
             <% end %>
           <% end %>
       </div>
@@ -103,11 +95,11 @@
       <div id="member-of-bands">
           <% if current_musician.members.count > 0 %>
 
-            <h1>Member of:</h1><br />
+            <br><h2>Member of:</h2>
 
             <% current_musician.members.each do |member|%>
-              Band:  <%= member.band.name %><br />
-              Position:  <%= member.position.description %><br />  <%= button_to 'View Band', band_path(member.band.id), :method => :get %><br />
+              <%= link_to member.band.name, :method => :get %><br />
+              Position:  <%= member.position.description %><br />
             <% end %>
           <% end %>
       </div>
@@ -135,7 +127,7 @@
     <div id="youtube-window">
       <% if @musician.youtube_url && @musician.youtube_url != "" %>
 
-        <h1>Demo Reel</h1>
+        <br><h2>Demo Reel</h2>
 
         <div class="embed-container">
           <%= embed(@musician.youtube_url) %>
