Updated some CSS and musicians show.

--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -29,6 +29,7 @@ aside {
   width: 25%;
   border: 5px solid #ccc;
   height: 100%;
+  border-radius: 28px;
 }
 
 main {
@@ -37,6 +38,7 @@ main {
   width: 65%;
   padding: 30px;
   border: 5px solid #ccc;
+  border-radius: 28px;
 
   h2 {
     font-size: 1em;
