--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,17 +7,7 @@
 
 
 <body>
-
-
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap2", async: true, defer: true %>
-<div id="searchmap" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>>
-</div>
-<!-- <select name="positions">
-    <%= @positions.each do |position| %>
-      <option value="<%= position.id %>"><%= position.description %></option>
-    <% end %>
-  </select> -->
-
+  <label for= "Position">Position:</label>
   <select id="position" name="positions" show="Band" >
           <option data-id="1" data-name="Singer" >singer</option>
           <option data-id="2" data-name="Rhythm">Rhythm</option>
@@ -30,7 +20,7 @@
 
 
 
-<!-- <select id="genre"> -->
+  <!-- <select id="genre"> -->
   <select id="genre" name="genres" >
           <option data-id="1" data-name="Classic" >classic</option>
           <option data-id="2" data-name="Heavy Metal">Heavy Metal</option>
@@ -46,6 +36,17 @@
           <option data-id="12" data-name="Rock and  Roll ">Rock and Roll</option>
           <option data-id="13" data-name="Jazz">Jazz</option>
       </select>
+
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap2", async: true, defer: true %>
+<div id="searchmap" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>>
+</div>
+<!-- <select name="positions">
+    <%= @positions.each do |position| %>
+      <option value="<%= position.id %>"><%= position.description %></option>
+    <% end %>
+  </select> -->
+
+
     <!-- <%= @genres.each do |genre| %>
       <option value="<%= genre.id %>"><%= genre.description %></option>
     <% end %> -->
