--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -17,31 +17,31 @@
     <% end %>
   </select> -->
 
-  <select id="position" name="positions" show="Band" >
-    <option data-id="1" data-name="Singer" >singer</option>
-    <option data-id="2" data-name="Rhythm">Rhythm</option>
-    <option data-id="3" data-name="Drummer">drummer</option>
-    <option data-id="4" data-name="Lead">Lead</option>
-    <option data-id="5" data-name="Acoustic">Acoustic</option>
-    <option data-id="6" data-name="Bass">Bass</option>
-    <option data-id="7" data-name="Keyboard">Keyboard</option>
+  <select id="position" name="positions">
+    <option data-id="0" data-name="all">All</option>
+    <option data-id="1" data-name="singer">Singer</option>
+    <option data-id="2" data-name="drummer">Drummer</option>
+    <option data-id="3" data-name="lead">Lead</option>
+    <option data-id="4" data-name="bass">Bass</option>
+    <option data-id="5" data-name="keyboard">Keyboard</option>
   </select>
 
   <!-- <select id="genre"> -->
   <select id="genre" name="genres" >
-    <option data-id="1" data-name="Classic" >classic</option>
-    <option data-id="2" data-name="Heavy Metal">Heavy Metal</option>
-    <option data-id="3" data-name="Goth">Goth</option>
-    <option data-id="4" data-name="alternative">alternative</option>
-    <option data-id="5" data-name="Pop">Pop</option>
-    <option data-id="6" data-name="Blues">Blues</option>
-    <option data-id="7" data-name="Psychadelic">Psychadelic</option>
-    <option data-id="8" data-name="Punk">Punk</option>
-    <option data-id="9" data-name="Glam">Glam</option>
-    <option data-id="10" data-name="Britpop">Britpop</option>
-    <option data-id="11" data-name="Indie">Indie</option>
-    <option data-id="12" data-name="Rock and  Roll ">Rock and Roll</option>
-    <option data-id="13" data-name="Jazz">Jazz</option>
+    <option data-id="0" data-name="all">All</option>
+    <option data-id="1" data-name="classic">Classic</option>
+    <option data-id="2" data-name="heavy metal">Heavy Metal</option>
+    <option data-id="3" data-name="goth">Goth</option>
+    <option data-id="4" data-name="alternative">Alternative</option>
+    <option data-id="5" data-name="pop">Pop</option>
+    <option data-id="6" data-name="blues">Blues</option>
+    <option data-id="7" data-name="psychadelic">Psychadelic</option>
+    <option data-id="8" data-name="punk">Punk</option>
+    <option data-id="9" data-name="glam">Glam</option>
+    <option data-id="10" data-name="britpop">Britpop</option>
+    <option data-id="11" data-name="indie">Indie</option>
+    <option data-id="12" data-name="rock and roll">Rock and Roll</option>
+    <option data-id="13" data-name="jazz">Jazz</option>
   </select>
     <!-- <%= @genres.each do |genre| %>
       <option value="<%= genre.id %>"><%= genre.description %></option>
