Continued front-end changes. Working on filter for index page, JS not functioning correctly yet.

--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -57,3 +57,11 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.apply-button {
+  background-color: red;
+  border-radius: 28px;
+
+  
+}
