--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -49,7 +49,7 @@
           <!-- Non Owner -->
           <% elsif @band.leader.id != current_musician.id %>
               <% if member.vacant? %>
-                <%= button_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post %>
+                <%= button_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post, class: "apply-button" %>
               <% else %>
                 <%= image_tag member.musician.avatar.profile, size: "50x50" %>
               <% end %>
