added description box to bands

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
       </div>
 
       <section id="musicians-list">
-        <h3>Musicians near you</h3>
+        <h3 class="equalizer">Musicians near you</h3>
 
         <div class="musicians">
           <%= render "home/musicians" %>
