--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -23,7 +23,14 @@
           <%= image_tag("skills/keyboard.png", size:  "50x50") if member.position.description == "keyboard" %>
           <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "bass" %>
           <%= member.musician.firstname %>
-        <% else %>
+        <% end %>
+      </p>
+    <% end %>
+
+    <p>Vacant slots</p><br />
+    <% @band.members.each do |member| %>
+      <p>
+         <% if member.musician == nil %>
           <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "lead" %>
           <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "rhythm" %>
           <%= image_tag("skills/singer.png", size:  "50x50") if member.position.description == "singer" %>
@@ -59,8 +66,6 @@
               <p>Please register to apply</p>
           <% end %>
         <% end %>
-
-
       </p>
     <% end %>
 
