arranged card so img, name and description

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,12 +35,12 @@
       </button>
 
       <h3>Bands</h3>
-      <div class="bands">
+      <div class="equalizer">
           <%= render "home/bands" %>
       </div>
 
       <section id="musicians-list">
-        <h3 class="equalizer">Musicians near you</h3>
+        <h3>Musicians near you</h3>
 
         <div class="musicians">
           <%= render "home/musicians" %>
