--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -323,10 +323,17 @@ z-index: 1;
 position: relative;
 }
 
+
 .equalizer {
   position: relative;
   padding: 0;
-  margin:  50px auto;
+  margin:  75px auto;
+  // overflow: hidden;
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: #272727;
+  border-radius: 2px;
+}
 
   .band-image {
     position: relative;
@@ -336,13 +343,14 @@ position: relative;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     color: #272727;
     border-radius: 2px; }
-  
+
 
   #band-name {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    z-index: 1;
+    position: relative;
+    top: 300px;
+    right: 2px;
+    z-index: 2;
+
   }
 
   #band-description {
@@ -350,13 +358,13 @@ position: relative;
     position: relative;
     bottom: 5px;
 
-    top: 3px;
-    z-index: 1;
-    font-family: 'Roboto', sans-serif;
-  overflow: hidden;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  color: #272727;
-  border-radius: 2px; }
+    top: 0.5px;
+    z-index: 2px;
+    font-family: 'Roboto', sans-serif; }
+  // overflow: hidden;
+  // box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  // color: #272727;
+  // border-radius: 2px;
 
 
 
@@ -390,35 +398,35 @@ position: relative;
   }
 }
 
-.article-card {
-	border: 1px solid #d7d7d7;
-	margin-bottom: 1.5rem;
-	box-shadow: 2px 4px 5px 0px #d7d7d7;
-	.card-content {
-		background: #fff;
-		margin: 1.25rem;
-		.post-author {
-			text-align: center;
-		}
-		h4 {
-			color: #CF000F;
-		}
-		p {
-			color: #757D75;
-		}
-		a i {
-			font-weight: 300;
-			color: #757D75;
-			margin: 0 .5rem;
-			padding: 5px 7px 5px 7px;
-			border: 1px solid #757D75;
-			border-radius: 50%;
-		}
-		img.post-icon {
-			position: absolute;
-			width: 3rem;
-			border-radius: 50%;
-			margin-top: -3rem;
-		}
-	}
-}
+// .article-card {
+// 	border: 1px solid #d7d7d7;
+// 	margin-bottom: 1.5rem;
+// 	box-shadow: 2px 4px 5px 0px #d7d7d7;
+// 	.card-content {
+// 		background: #fff;
+// 		margin: 1.25rem;
+// 		.post-author {
+// 			text-align: center;
+// 		}
+// 		h4 {
+// 			color: #CF000F;
+// 		}
+// 		p {
+// 			color: #757D75;
+// 		}
+// 		a i {
+// 			font-weight: 300;
+// 			color: #757D75;
+// 			margin: 0 .5rem;
+// 			padding: 5px 7px 5px 7px;
+// 			border: 1px solid #757D75;
+// 			border-radius: 50%;
+// 		}
+// 		img.post-icon {
+// 			position: absolute;
+// 			width: 3rem;
+// 			border-radius: 50%;
+// 			margin-top: -3rem;
+// 		}
+// 	}
+// }
