--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,16 +1,18 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
+
     <% @bands.each do |band| %>
       <div class="small-4 columns">
+        <div class="card">
         <%= link_to band_path(band.id) do %>
-        <div class="equalizer" data-equalizer-watch>
-          <p id="band-name"><%= band.name %></p>
+            <%= band.name %>
             <%= image_tag band.poster.profile, class: "band-image"%>
-    
-          <p id="band-description"><%= band.description %></p>
+
+           <%= band.description %>
         </div>
       </div>
       <% end %>
     <% end %>
+
 </div>
 
 <!-- <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
