--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -328,13 +328,23 @@ position: relative;
   position: relative;
   padding: 0;
   margin:  75px auto;
+
+
   // overflow: hidden;
 .card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   color: #272727;
   border-radius: 2px;
+  bottom: 50px;
+  background-image: url(background/star.jpg);
+
 }
 
+.font-color{
+  color: white;
+  font-weight: normal;
+  font-family: Fabrica;
+}
   .band-image {
     position: relative;
     width: 100%;
