--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -1,13 +1,14 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
     <% @musicians.each do |musician| %>
-    <div class="small-4 columns">
-      <%= link_to musician_path(musician.id) do %>
-      <div class="equalizer" data-equalizer-watch>
-        <p id="musician-name">
+    <div class="medium-4 columns">
+
+      <div class="card">
+        <%= link_to musician_path(musician.id), class: "font-color" do %>
+
           <%= musician.firstname %> <%= musician.lastname %>
-        </p>
+
           <%= image_tag musician.avatar.profile, class: "musician-image" %>
-        <p id="musician-position">
+
           <% musician.positions.each do |position| %>
             <!-- <%= position.description %><br /> -->
             <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
@@ -16,16 +17,17 @@
             <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
             <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
           <% end %>
-        </p><br/>
-        <p id="musician-location">
+        <br/>
+
         <% if current_musician.present? && current_musician.has_long_lat? && musician.has_long_lat? %>
           <%= musician.display_distance_to(@musician) %> km away<br />
         <% else %>
           Based in <%= musician.city %>
         <% end %>
-      </p>
-      <% end %>
+
+
       </div>
     </div>
+    <% end %>
     <% end %>
 </div>
