--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
       <section id="musicians-list">
         <h3>Musicians near you</h3>
 
-        <div class="musicians">
+        <div class="equalizer">
           <%= render "home/musicians" %>
         </div>
       </section>
